kubernetes/client.yml
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip-service
spec:
  type: ClusterIP
  selector:
    component: client
  ports:
  - port: 3000
    targetPort: 3000


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  selector:
    matchLabels:
      component: client 
  template:
    metadata:
      labels:
        component: client 
    spec:
      containers:
      - name: client-pod
        image: israndomcat/randomcat-client
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
