kubernetes/server.yml
apiVersion: v1
kind: Service
metadata:
  name: server-clusterip-service
spec:
  type: ClusterIP
  selector:
    component: server 
  ports:
  - port: 8080
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  selector:
    matchLabels:
      component: server 
  template:
    metadata:
      labels:
        component: server 
    spec:
      containers:
      - name: server 
        image: israndomcat/randomcat-server
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
        resources:
          requests:
            cpu: '300m'
            memory: '128M'
          limits:
            cpu: '600m'
            memory: '512M'
