kubernetes/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/use-regex: "true"
    # acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  rules:
  - host: randomcat.io 
    http:
      paths:
      - pathType: Prefix
        path: /?(.*)
        backend:
          service:
            name: client-clusterip-service
            port: 
              number: 3000
      - pathType: Prefix
        path: /api/?(.*)
        backend:
          service:
            name: server-clusterip-service
            port:
              number: 8080
  tls: 
    - secretName: randomcat.io
      hosts: 
        - randomcat.io
